# fastapi-livros-redis

./: .gitignore  Dockerfile  README.md  deployment.yaml  logstash.conf  main.py  pyproject.toml  redis-manifest.yaml  service.yaml
.github/workflows/: python-app.yml
tests/: test_main.py
