[project]
name = "fastapi-livros-redis"
version = "0.1.0"
description = "Projeto FastAPI com Redis para exercicio de CI/CD"
authors = [
    {name = "Liliane Lima"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis"
]

[tool.poetry]
packages = []

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"